[gd_scene load_steps=10 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/fonts/FontHeading.tres" type="DynamicFont" id=2]
[ext_resource path="res://content/gamemode/relichunt/RunFinishedPopup.gd" type="Script" id=3]
[ext_resource path="res://gui/fonts/FontLarge.tres" type="DynamicFont" id=4]
[ext_resource path="res://content/gamemode/RunStats.tscn" type="PackedScene" id=6]
[ext_resource path="res://content/gamemode/unlockables/SpecialUnlocks.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/panels/panel_outside.tres" type="StyleBox" id=8]
[ext_resource path="res://content/gamemode/gadgetchoice/KeepGadgetPanel.tscn" type="PackedScene" id=9]

[sub_resource type="ButtonGroup" id=1]

[node name="RunFinishedPopup" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_top = 162.0
margin_right = 2152.0
margin_bottom = 918.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 2120.0
margin_bottom = 724.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 2072.0
margin_bottom = 676.0
custom_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 2056.0
margin_bottom = 97.0

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 2040.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 81.0
margin_right = 556.0
margin_bottom = 105.0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 1000.0
margin_top = 127.0
margin_right = 1056.0
margin_bottom = 183.0
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 44.0
margin_bottom = 44.0

[node name="RunStats" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 4

[node name="ChoosePerkPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 359.0
margin_right = 1684.0
margin_bottom = 566.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1672.0
margin_bottom = 195.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1644.0
margin_bottom = 167.0

[node name="Label1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel/MarginContainer/VBoxContainer"]
margin_right = 1628.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "CHOOSE A PERK"
align = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel/MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 1628.0
margin_bottom = 78.0
text = "It will help you in your next run."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 1628.0
margin_bottom = 151.0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 395.0
margin_bottom = 57.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 1 )
text = "HUD"

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 411.0
margin_right = 806.0
margin_bottom = 57.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 1 )
text = "Jetpack+"

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 822.0
margin_right = 1217.0
margin_bottom = 57.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 1 )
text = "Slow Waves"

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ChoosePerkPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1233.0
margin_right = 1628.0
margin_bottom = 57.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 1 )
text = "Extra Cobalt"

[node name="KeepGadgetPopup" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 213.0
margin_right = 2056.0
margin_bottom = 375.0

[node name="SpecialUnlocks" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 405.0
margin_right = 2056.0
margin_bottom = 486.0

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 618.0
margin_right = 556.0
margin_bottom = 642.0

[node name="UnlockElementButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 516.0
margin_right = 2056.0
margin_bottom = 573.0
size_flags_horizontal = 3
text = "level.gameover.proceedtounlock"

[node name="NavigationButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 603.0
margin_right = 2056.0
margin_bottom = 660.0

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NavigationButtons"]
margin_right = 1020.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "level.gameover.backtomainmenu"

[node name="AnotherRunButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/NavigationButtons"]
margin_left = 1036.0
margin_right = 2056.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "level.gameover.retry"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/UnlockElementButton" to="." method="_on_UnlockElementButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NavigationButtons/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/NavigationButtons/AnotherRunButton" to="." method="_on_AnotherRunButton_pressed"]
